# intel-console

./: .gitignore  CLAUDE.md  branch_audit.csv  export_static.py  generate_branch_assignments.py  geo_enrich.py  index.html  maintenance.html  pyproject.toml  schema.sql  serve.sh  signal_collector.py
css/: style.css
data/: centrality.json  entities.json  geo-entities.json  graph.json  intel.db  relationships.json  sources.json  stats.json
enrichment/: audit_fixes.py  batch_0.json  batch_1.json  batch_2.json  batch_3.json  batch_4.json  batch_5.json  entity_list.json  existing_connections.json  ledger.jsonl  merge.py  prepare.py  summary.json  worker.py
js/: api.js  app.js  branches.js  cytomap.js  dossier.js  navigator.js  search.js  timeline.js
seed/: add_expansion.py  curated_entities.py  download_grove_photos.py  download_grove_photos_v2.py  download_photos_batch.py  download_photos_batch2.py  download_photos_curated.py  download_photos_expansion.py  download_photos_newage.py  download_photos_nonperson.py  download_photos_remaining.py  expansion_911.py  expansion_bioweapons.py  expansion_bohemian_grove.py  expansion_china.py  expansion_consciousness.py  expansion_consciousness_deep.py  expansion_cosmology_deep.py  expansion_cosmology_origins.py  expansion_disclosure_scrolls.py  expansion_drug_trafficking.py  expansion_dynasties.py  expansion_election_interference.py  expansion_energy_suppression.py  expansion_enrichment.py  expansion_false_flags.py  expansion_financial.py  expansion_financial_deep.py  expansion_food_supply.py  expansion_france.py  (+30 more)
server/: db.py  (+2 more)
(+27 files in other folders)
